Changes on ECG instrument runner (rollback some previous useless modifications).  Replaced code by configuration.